--- a/style.css
+++ b/style.css
@@ -3,17 +3,28 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     display: flex;
-    width: 90%;
-    height: 90vh;
+    width: 100%;
+    height: 100vh;
+    flex-direction: column;
+    justify-content: flex-start;
+    margin: 0;
+}
+
+h1 {
+    text-align: center;
+    text-shadow: 4px 4px 10px rgba(0, 0, 0, 0.9);
+    color: black; 
+    font-size: 50px;
 }
 
 .tela-login {
     width: 60%;
-    height: 40vh;
+    height:75vh;
     margin:  auto;
     background: transparent;
-    backdrop-filter: blur(10px);
+    backdrop-filter: blur(3px);
     border: 2px solid rgba(255, 255, 255, .2);
     border-radius: 10px;
+    box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.9);;
 }
     
