--- a/style.css
+++ b/style.css
@@ -18,13 +18,102 @@ h1 {
 }
 
 .tela-login {
-    width: 60%;
-    height:75vh;
+    width: 70%;
+    height:60vh;
     margin:  auto;
     background: transparent;
     backdrop-filter: blur(3px);
     border: 2px solid rgba(255, 255, 255, .2);
     border-radius: 10px;
-    box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.9);;
+    box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.9);
 }
+
+.login-heading {
+    text-shadow: 4px 4px 10px rgba(0, 0, 0, 0.9);
+    color: black;
+    font-size: 40px; 
+    text-align: right; 
+    margin-right: 20px; 
+}
+
+.form-container {
+    text-align: right; 
+}
+
+.login,
+.remember-forgot {
+    text-align: right; 
+} 
+
     
+.tela-login form {
+    font-size: 20px;
+    text-align: center;
+    margin-right: 100px
+}
+
+.tela-login .login input[type="text"],
+.tela-login .login input[type="password"] {
+    width: 40%;
+    height:6vh;
+    margin-bottom: 20px;
+    border-radius: 30px; 
+    box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.9);;
+    border: 2px solid rgba(0, 0, 0, 0.2);
+    text-align: center;
+}
+
+.new-member {
+    font-size: 20px;
+    text-align: center;
+    margin-right: 500px;
+    margin-top: -30%;
+    position: absolute;
+}
+
+.vertical-line {
+position: absolute; 
+    width: 1px; 
+    height: 100%; 
+    background-color: #000; 
+    left: 300px; 
+    backdrop-filter: blur(3px);
+    border: 2px solid rgba(255, 255, 255, .2);
+    border-radius: 10px;
+    box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.7);
+    background: transparent;
+}
+
+.btn {
+    width: 150px; 
+    height: 4vh;
+    margin-top: 10px;
+    border-radius: 10px;
+    margin-right: 70px;
+    border: 2px solid rgba(209, 208, 208, 0.2);
+    background-color: #2000ad;
+    box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.7);
+    color: white;
+}
+
+.bem-vindo {
+    text-shadow: 4px 4px 10px rgba(0, 0, 0, 0.9);
+    color: black;
+    font-size: 30px;  
+    margin-right: 5px;
+}
+
+
+
+.icon {
+    font-size: 40px; 
+    margin-right: 10px; 
+    color: #ffffff; 
+    text-decoration: none;
+    align-items: center;
+}
+
+.icon i {
+    margin-right: 30px;
+    margin-top: 70px;
+}
