Trocando a imagem de fundo.

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url(imagens/06a3599eed449a94484a6747bc03d9e5.jpg);
+    background-image: url(imagens/Login.png);
     background-repeat: no-repeat;
     background-size: cover;
     display: flex;
